# simMAtree

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  eval_on_sim.sh  example.config.yml  example.config_BD.yml  example.config_Yule.yml  generate_data.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run.py  run_yule.py  run_yule_alternative.py  sbi_method_comparison.sh  test_commands.sh  trained_posterior_Yule.yml
.github/workflows/: ci.yml  comprehensive_tests.yml  test.yml  unit-tests.yml
config/: example.config_Yule.yml  unified_stemma_config.yml
data/: handschriftencensus_witness.csv  jonas_witness.csv  poetry.xlsx  prose.xlsx  simulation.csv
inference/: base_backend.py  pymc_backend.py  sbi_backend.py
models/: base_model.py  birth_death_poisson.py  yule_model.py
params/: birth_death_poisson.json  pymc_config.json  sbi_config.json  yule.json  yule_param.json  yule_param_simul.json
src/: __main__.py  visualisation.py  yule.py
src/cli/: config_parser.py  generate.py  inference.py  score.py
src/cli/config/: __init__.py  constants.py  exceptions.py  parser.py
src/config/: exceptions.py  parser.py  types.py
src/generator/: __init__.py  base_generator.py  birth_death_abundance.py  birth_death_abundance_single_tree.py  birth_death_stemma.py  birth_death_tree.py  birth_death_witness.py  generalized_abundance.py  generalized_stemma.py  generalized_witness.py  hybrid_yuleBD_abundance.py  twostates_BD_generator.py  unified_stemma.py  yule_abundance.py  yule_witness.py
src/inference/: __init__.py  base_backend.py  pymc_backend.py  sbi_backend.py
src/models/: __init__.py  base_model.py  base_prior.py  birth_death_poisson.py  constants.py  distribution.py  yule_model.py
src/priors/: __init__.py  base_prior.py  box_uniform_4D.py  constrained_uniform.py  constrained_uniform_2D.py  constrained_uniform_3D.py  constrained_uniform_4D.py  hybrid_constrained_uniform_3D.py  pytorch_priors.py
src/stats/: __init__.py  abundance_stats.py  base_stats.py  stemma_stats.py  topology_stats.py
src/utils/: birth_death_utils.py  evaluation.py  model_param_type.py  stats.py  stemma_utils.py  survival_rate.py  visualisation.py  visualisation_stemma.py  yule.py
tests/: config_parsing_test.py  constants.py  e2e_test.py  run_all_test.py  vis_inference_test.py
tests/e2e/: pymc_test.py  sbi_test.py
tests/integration/: cli_test.py
tests/mock/: bd_sbi_inference_config.yml  pymc_inference_data.nc  simulation_data.csv  yule_pymc_inference_config.yml  yule_sbi_inference_config.yml
tests/unit/: config_parsing_test.py  generators_test.py  model_inheritance_test.py  priors_test.py  sbi_backend_test.py  sbi_visualization_test.py  stats_test.py  vis_inference_test.py
utils/: evaluation.py  stats.py  visualisation.py  yule.py
