[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simMAtree"
version = "0.0.1"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "pymc (>=5.22.0,<6.0.0)",
    "pyaml (>=25.1.0)",
    "arviz (>=0.21.0,<0.22.0)",
    "torch (>=2.7.0,<3.0.0)",
    "sbi (==0.23.3)",
    "seaborn (>=0.13.2)",
    "rich (>=14.0.0,<15.0.0)",
    "click (>=8.2.0,<9.0.0)",
    "numpy (==1.26.4)",
    "pydantic>=2.11.4",
]
requires-python = ">=3.12"
authors = [
  {name = "Théo Moins"},
  {name = "Jean-Baptiste Camps"},
  {name = "Ulysse Godreau"},
  {name = "Kelly Christensen"}
]
description = "Bayes Yule"
readme = "README.md"
license = {file = "LICENSE"}
keywords = []

[tool.hatch.build.targets.wheel]
      packages = ["src", "tests"]

[tool.uv.workspace]
members = [
    "uv-test",
]

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.10",
    "uv>=0.7.6",
]

[project.urls]
Repository = "https://github.com/LostMa-ERC/BayesYule.git"

[project.scripts]
simmatree = "src.__main__:cli"
simmatree-test = "src.__main__:test_installation"

[tool.isort]
profile = "black"
line_length = 79
src_paths = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
addopts = '--doctest-modules --doctest-glob="*.md"'
doctest_optionflags = [
    "ELLIPSIS",
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL"
]